k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-app-service
  namespace: sample-app
  labels:
    app: backend-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: backend-app
